--- a/aws/cf/ecs-ec2/worker.yml
+++ b/aws/cf/ecs-ec2/worker.yml
@@ -12,7 +12,7 @@ Parameters:
     Description: A name for the service
   ImageUrl:
     Type: String
-    Default: nithmu/nithish:voting-ap-worker
+    Default: subfuzion/vote-worker
     Description: The url of a docker image that contains the application process that
                  will handle the traffic for this service
   TaskCpu:
