--- a/aws/cf/ecs-ec2/database.yml
+++ b/aws/cf/ecs-ec2/database.yml
@@ -17,7 +17,7 @@ Parameters:
                  will handle the traffic for this service
   XRayImageUrl:
     Type: String
-    Default: nithmu/nithish:xray
+    Default: subfuzion/vote-xray:1
     Description: The url of a docker image that contains the X-Ray daemon that will
                  handle the traffic for this service
   ContainerPort:
@@ -190,7 +190,7 @@ Resources:
 
 Outputs:
   MongoURI:
-    Description: The url of the external load balancer
+    Description: The url of the internal load balancer
     Value: !Join ['', [ 'mongodb://', !GetAtt 'MongoLoadBalancer.DNSName', ':27017' ]]
     Export:
       Name: !Join [ ':', [ !Ref 'EnvironmentName', 'MongoURI' ] ]
