--- a/aws/cf/ecs-ec2/votes.yml
+++ b/aws/cf/ecs-ec2/votes.yml
@@ -12,7 +12,7 @@ Parameters:
     Description: A name for the service
   ImageUrl:
     Type: String
-    Default: subfuzion/vote-votes:1
+    Default: subfuzion/vote-votes:latest
     Description: The url of a docker image that contains the application process that
                  will handle the traffic for this service
   ContainerPort:
@@ -319,14 +319,3 @@ Resources:
       ComparisonOperator: GreaterThanOrEqualToThreshold
       AlarmActions:
         - !Ref ScaleUpPolicy
-
-# These are the values output by the CloudFormation template. Be careful
-# about changing any of them, because of them are exported with specific
-# names so that the other task related CF templates can use them.
-
-Outputs:
-  VotesURI:
-    Description: The url of the internal load balancer
-    Value: !Join ['', [ 'https://', !GetAtt 'VotesLoadBalancer.DNSName', !Ref 'ContainerPort' ]]
-    Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'VotesURI' ]]
