--- a/aws/cf/ecs-ec2/votes.yml
+++ b/aws/cf/ecs-ec2/votes.yml
@@ -12,7 +12,7 @@ Parameters:
     Description: A name for the service
   ImageUrl:
     Type: String
-    Default: subfuzion/vote-votes:latest
+    Default: subfuzion/vote-votes:1.0.2
     Description: The url of a docker image that contains the application process that
                  will handle the traffic for this service
   ContainerPort:
