minor stack file description edits

--- a/aws/cf/ecs-ec2/queue.yml
+++ b/aws/cf/ecs-ec2/queue.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Docker Voting App Redis Queuing service
+Description: Voting App queue service
 Parameters:
   EnvironmentName:
     Type: String
