--- a/aws/cf/ecs-ec2/database.yml
+++ b/aws/cf/ecs-ec2/database.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Docker Voting App Mongo Database service
+Description: Voting App database service
 Parameters:
   EnvironmentName:
     Type: String
