--- a/src/vote/Dockerfile
+++ b/src/vote/Dockerfile
@@ -12,5 +12,4 @@ ARG NODE_ENV
 ENV NODE_ENV ${NODE_ENV:-development}
 WORKDIR /usr/src/app
 COPY --from=build /usr/src/app .
-EXPOSE 3000
-ENTRYPOINT [ "node", "app.js" ]
+ENTRYPOINT [ "node", "main.js" ]
