--- a/src/vote/package.json
+++ b/src/vote/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "@subfuzion/vote",
-  "version": "1.0.5",
-  "description": "Voting app for Docker Demo",
+  "name": "@subfuzion/voter",
+  "version": "1.0.2",
+  "description": "Voting app for Docker demo",
+  "repository": "https://github.com/subfuzion/node-voter",
   "author": "Tony Pujals <tony@subfuzion.com> (https://twitter.com/subfuzion)",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/subfuzion/node-vote.git"
-  },
   "scripts": {
-    "start": "node app.js",
+    "start": "node main.js",
     "test": "mocha --ui tdd"
+  },
+  "bin": {
+    "voter": "./bin/voter"
   },
   "engines": {
     "node": ">=v8.0.0"
   },
   "dependencies": {
-    "@subfuzion/database": "1.2.2",
-    "@subfuzion/queue": "1.5.6",
-    "axios": "^0.18.0",
-    "body-parser": "~1.18.3",
-    "debug": "~4.1.0",
-    "express": "~4.16.4",
-    "morgan": "~1.9.1"
+    "commander": "^2.13.0",
+    "express": "4.16.2",
+    "inquirer": "^5.0.1"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "axios": "^0.18.0",
+    "mocha": "^5.0.4"
   }
 }
