update compose file to use renamed directories for services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     depends_on:
       - queue
 
-  vote:
-    build: src/vote
+  web:
+    build: src/web
     networks:
       - bridge_net
     ports:
