fixing a few syntax errros

--- a/aws/cf/ecs-ec2/database.yml
+++ b/aws/cf/ecs-ec2/database.yml
@@ -97,8 +97,7 @@ Resources:
           Memory: 440
           Image: !Ref 'ImageUrl'
           PortMappings:
-            - 
-              ContainerPort: !Ref 'ContainerPort'
+            - ContainerPort: !Ref 'ContainerPort'
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
@@ -111,20 +110,32 @@ Resources:
           Memory: 64
           Image: !Ref 'XRayImageUrl'
           PortMappings:
+            -
+              ContainerPort: 2000
+              Protocol: udp
         - Name: "envoy"
           Image: "envoyproxy/envoy"
           Essential: true
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
-              awslogs-group: { Ref: ServiceLogGroup }
+              awslogs-group: { Ref: LogGroup }
               awslogs-region: { Ref: "AWS::Region" }
               awslogs-stream-prefix: !Join ['-', [!Ref 'EnvironmentName', !Ref 'ServiceName', "envoy"]]
           Environment:
             - Name: "ENVOY_CONFIG_FILE"
               Value: "/etc/envoy/database_node.yaml"
             - Name: "ENVOY_SERVICE_CLUSTER"
-              Value: !Join ['.', [!Ref 'ServiceName', Fn::ImportValue: !Join [':', [!Ref 'EnvironmentName', 'ServicesDomain']]]]
+              Value:
+                  Fn::Join:
+                      - '.'
+                      - - !Ref 'ServiceName'
+                        - Fn::ImportValue:
+                            Fn::Join:
+                              - ':'
+                              - - !Ref 'EnvironmentName'
+                                - 'ServicesDomain'
+
             - Name: "ENVOY_SERVICE_NODE_ID"
               Value: { Ref: LatticeServiceEndpointIdentifier }
             - Name: "LOG_LEVEL"
@@ -138,7 +149,7 @@ Resources:
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
-              awslogs-group: { Ref: ServiceLogGroup }
+              awslogs-group: { Ref: LogGroup }
               awslogs-region: { Ref: "AWS::Region" }
               awslogs-stream-prefix: !Join ['-', [!Ref 'EnvironmentName', !Ref 'ServiceName',"router"]]
           LinuxParameters:
@@ -167,8 +178,7 @@ Resources:
     DependsOn: MongoListener
     Properties:
       ServiceRegistries:
-        - RegistryArn:
-          'Fn::GetAtt': ServiceDiscoveryRecord.Arn
+        - RegistryArn: !GetAtt ServiceDiscoveryRecord.Arn
       ServiceName: !Ref 'ServiceName'
       Cluster:
         Fn::ImportValue:
@@ -203,8 +213,8 @@ Resources:
         NamespaceId:
           Fn::ImportValue:
             !Join [':', [!Ref 'EnvironmentName', 'ServiceDiscoveryNamespace']]
-            DnsRecords:
-            - Type: A
+        DnsRecords:
+          - Type: A
             TTL: 300
         HealthCheckCustomConfig:
           FailureThreshold: 1
