--- a/aws/cf/ecs-ec2/web.yml
+++ b/aws/cf/ecs-ec2/web.yml
@@ -111,14 +111,22 @@ Resources:
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
-              awslogs-group: { Ref: ServiceLogGroup }
+              awslogs-group: { Ref: LogGroup }
               awslogs-region: { Ref: "AWS::Region" }
               awslogs-stream-prefix: !Join ['-', [!Ref 'EnvironmentName', !Ref 'ServiceName', "envoy"]]
           Environment:
             - Name: "ENVOY_CONFIG_FILE"
               Value: "/etc/envoy/web_node.yaml"
             - Name: "ENVOY_SERVICE_CLUSTER"
-              Value: !Join ['.', [!Ref 'ServiceName', Fn::ImportValue: !Join [':', [!Ref 'EnvironmentName', 'ServicesDomain']]]]
+              Value:
+                  Fn::Join:
+                      - '.'
+                      - - !Ref 'ServiceName'
+                        - Fn::ImportValue:
+                            Fn::Join:
+                              - ':'
+                              - - !Ref 'EnvironmentName'
+                                - 'ServicesDomain'
             - Name: "ENVOY_SERVICE_NODE_ID"
               Value: { Ref: LatticeServiceEndpointIdentifier }
             - Name: "LOG_LEVEL"
@@ -132,7 +140,7 @@ Resources:
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
-              awslogs-group: { Ref: ServiceLogGroup }
+              awslogs-group: { Ref: LogGroup }
               awslogs-region: { Ref: "AWS::Region" }
               awslogs-stream-prefix: !Join ['-', [!Ref 'EnvironmentName', !Ref 'ServiceName',"router"]]
           LinuxParameters:
@@ -161,8 +169,7 @@ Resources:
     DependsOn: LoadBalancerRule
     Properties:
       ServiceRegistries:
-        - RegistryArn:
-          'Fn::GetAtt': ServiceDiscoveryRecord.Arn
+        - RegistryArn: !GetAtt ServiceDiscoveryRecord.Arn
       ServiceName: !Ref 'ServiceName'
       Cluster:
         Fn::ImportValue:
@@ -197,8 +204,8 @@ Resources:
         NamespaceId:
           Fn::ImportValue:
             !Join [':', [!Ref 'EnvironmentName', 'ServiceDiscoveryNamespace']]
-            DnsRecords:
-            - Type: A
+        DnsRecords:
+          - Type: A
             TTL: 300
         HealthCheckCustomConfig:
           FailureThreshold: 1
