removing backend load balancer targets and changing urls for db, queue

--- a/aws/cf/ecs-ec2/queue.yml
+++ b/aws/cf/ecs-ec2/queue.yml
@@ -200,11 +200,7 @@ Resources:
             - Fn::ImportValue:
                 !Join [':', [!Ref 'EnvironmentName', 'PrivateSubnetTwo']]
       TaskDefinition: !Ref 'TaskDefinition'
-      LoadBalancers:
-        - ContainerName: !Ref 'ServiceName'
-          ContainerPort: !Ref 'ContainerPort'
-          TargetGroupArn: !Ref 'TargetGroup'
-      
+
 
   ServiceDiscoveryRecord:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -220,49 +216,6 @@ Resources:
       HealthCheckCustomConfig:
         FailureThreshold: 1
 
-  TargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      HealthCheckIntervalSeconds: 10
-      HealthCheckProtocol: TCP
-      HealthyThresholdCount: 2
-      TargetType: ip
-      Name: !Ref 'ServiceName'
-      Port: 6379
-      Protocol: TCP
-      UnhealthyThresholdCount: 2
-      VpcId:
-        Fn::ImportValue:
-          !Join [':', [!Ref 'EnvironmentName', 'VPCId']]
-
-  RedisLoadBalancer:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    Properties:
-      Type: network
-      Scheme: internal
-      Subnets:
-        # The load balancer is placed into the private subnets, so that traffic
-        # from the internet should not reach the load balancer as this is internal service
-        - 
-          Fn::ImportValue:
-            !Join [':', [!Ref 'EnvironmentName', 'PrivateSubnetOne']]
-        - 
-          Fn::ImportValue:
-            !Join [':', [!Ref 'EnvironmentName', 'PrivateSubnetTwo']]
-
-  RedisListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - RedisLoadBalancer
-      - TargetGroup
-    Properties:
-      DefaultActions:
-        - TargetGroupArn: !Ref 'TargetGroup'
-          Type: 'forward'
-      LoadBalancerArn: !Ref 'RedisLoadBalancer'
-      Port: 6379
-      Protocol: TCP
-
 # These are the values output by the CloudFormation template. Be careful
 # about changing any of them, because of them are exported with specific
 # names so that the other task related CF templates can use them.
@@ -270,6 +223,6 @@ Resources:
 Outputs:
   RedisEndpoint:
     Description: The url of the internal load balancer
-    Value: !Join ['', [ !GetAtt 'RedisLoadBalancer.DNSName' ]]
+    Value: !Join ['', [ 'queue.votemesh.local' ]]
     Export:
       Name: !Join [ ':', [ !Ref 'EnvironmentName', 'RedisEndpoint' ] ]
