--- a/aws/cf/ecs-ec2/database.yml
+++ b/aws/cf/ecs-ec2/database.yml
@@ -3,7 +3,7 @@ Description: Voting App database service
 Parameters:
   EnvironmentName:
     Type: String
-    Default: voteapp
+    Default: voteapp2
     Description: A name for the environment that this cloudformation will be part of.
                  Used to locate other resources in the same environment.
   ServiceName:
@@ -228,7 +228,7 @@ Outputs:
         - - 'mongodb://'
           - Fn::Join:
                 - '.'
-                - - !Ref 'ServiceName'
+                - - 'database'
                   - Fn::ImportValue:
                       Fn::Join:
                         - ':'
