add curl to image

--- a/aws/servicemesh/envoy/Dockerfile
+++ b/aws/servicemesh/envoy/Dockerfile
@@ -1,8 +1,11 @@
 FROM envoyproxy/envoy
 
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN mkdir /envoyconfig
 ADD startup.sh /envoyconfig
 
-ENTRYPOINT [ "/bin/bash", "/envoyconfig/startup.sh"]
-
-CMD [ 'envoy', '-c', '/envoyconfig/envoy-bootstrap.yaml']
+ENTRYPOINT [ "/envoyconfig/startup.sh"]
+CMD [ "envoy", "-c", "/envoyconfig/envoy-bootstrap.yaml" ]
