make /envoyconig writeable

--- a/aws/servicemesh/envoy/Dockerfile
+++ b/aws/servicemesh/envoy/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir /envoyconfig
+RUN umask 000 && mkdir /envoyconfig
 ADD startup.sh /envoyconfig
 
 ENTRYPOINT [ "/envoyconfig/startup.sh"]
