add XRayImageUrl to templates

--- a/aws/cf/ecs-ec2/web.yml
+++ b/aws/cf/ecs-ec2/web.yml
@@ -22,6 +22,11 @@ Parameters:
     Type: Number
     Default: 3000
     Description: What port number the application inside the docker container is binding to
+  XRayImageUrl:
+    Type: String
+    Default: subfuzion/vote-xray:1
+    Description: The url of a docker image that contains the X-Ray daemon that will
+                 handle the traffic for this service
   ContainerCpu:
     Type: Number
     Default: 1024
